--- a/src/app/text-block.html
+++ b/src/app/text-block.html
@@ -4,5 +4,5 @@
 </div>
 <div ng-if="$ctrl.edit">
   <input type="text" ng-model="$ctrl.article.title" placeholder="Insert a title">
-  <textarea placeholder="Insert a body"></textarea>
+  <textarea placeholder="Insert a body" ng-model="$ctrl.article.body"></textarea>
 </div>
