--- a/src/app/block-modal.html
+++ b/src/app/block-modal.html
@@ -6,6 +6,6 @@
     <product-block ng-if="$ctrl.block.type ===  'products'" edit="true"></product-block>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="$ctrl.save()">OK</button>
+    <button class="btn btn-primary" type="button" ng-click="$ctrl.save()">Save</button>
     <button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">Cancel</button>
 </div>
