Initial product block

--- a/src/app/main.html
+++ b/src/app/main.html
@@ -12,7 +12,7 @@
       </button>
     </div>
     <text-block ng-if="block.type ===  'text'" edit="false" article="block"></text-block>
-    <product-block ng-if="block.type ===  'products'" edit="false"></product-block>
+    <product-block ng-if="block.type ===  'products'" edit="false" selected="block"></product-block>
   </div>
 
   <div>
