--- a/src/app/product-block.html
+++ b/src/app/product-block.html
@@ -1,5 +1,12 @@
 <div class="products">
-  <div ng-repeat="product in $ctrl.selectedProducts track by $index" class="product"
+  <div ng-if="!$ctrl.edit" ng-repeat="product in $ctrl.PRODUCTS | isSelected:$ctrl.selected.products" class="product">
+    <div>
+      <img ng-src="{{product.image}}">
+    </div>
+    <h5>{{product.title}}</h5>
+    <span>{{product.price | currency:'£'}}</span>
+  </div>
+  <div ng-if="$ctrl.edit" ng-repeat="product in $ctrl.PRODUCTS" class="product"
     ng-click="$ctrl.selectProduct($index)" ng-class="{'selected': product.isSelected}">
     <div>
       <img ng-src="{{product.image}}">
