--- a/src/index.scss
+++ b/src/index.scss
@@ -55,3 +55,20 @@
     margin-right: 10px;
   }
 }
+
+.text-block {
+  label {
+    display: block;
+    width: 100%;
+
+    input, textarea {
+      margin-left: 10px;
+      width: 100%;
+    }
+
+    textarea {
+      display: relative;
+      top: 0;
+    }
+  }
+}
