--- a/src/app/text-block.html
+++ b/src/app/text-block.html
@@ -2,7 +2,13 @@
   <h3>{{ $ctrl.article.title }}</h3>
   <p>{{ $ctrl.article.body }}</p>
 </div>
-<div ng-if="$ctrl.edit">
-  <input type="text" ng-model="$ctrl.article.title" placeholder="Insert a title">
-  <textarea placeholder="Insert a body" ng-model="$ctrl.article.body"></textarea>
+<div ng-if="$ctrl.edit" class="text-block">
+  <label>
+    Title:
+    <input type="text" ng-model="$ctrl.article.title" placeholder="Insert a title">
+  </label>
+  <label>
+    Body:
+    <textarea placeholder="Insert a body" ng-model="$ctrl.article.body"></textarea>
+  </label>
 </div>
